<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/cardview_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/nombre_tarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_tarjeta"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/numero_tarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_tarjeta"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/codigo_tarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo_tarjeta"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/vencimiento_tarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vencimiento_tarjeta"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>