<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.CreateUsserFragment"
    android:background="@color/app_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/cardview_background"
        app:cardCornerRadius="22dp"
        app:layout_constraintBottom_toTopOf="@+id/fullName_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/titulo_create_usser"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/mail_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.584" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullName_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_usser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullName_edit_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textEmailAddress"
            android:text="Jorge Merep" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dni_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_usser"
        app:layout_constraintEnd_toEndOf="@+id/btn_create_usser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName_layout"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/dni"
        app:counterEnabled="true"
        app:counterMaxLength="15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dni_edit_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textPassword"
            android:text="33996335" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create_usser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_usser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"/>

    <Button
        android:id="@+id/btn_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_usser"
        app:layout_constraintVertical_bias="0.348" />


</androidx.constraintlayout.widget.ConstraintLayout>